# comptSort

./: Pipfile  README.md  setup.cfg  setup.py  timing.py
.github/workflows/: integration.yml
comptSort/: __about__.py  __init__.py  cli.py  comptSort.py
comptSort/algorithms/: __init__.py  algorithms.py  binary_insertion.py  binary_search.py  bubble.py  insertion.py  merge.py  quick.py  sorter.py
docs/: Report.odt
tests/: test_bisect.py  test_sort.py
