[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sorting
license_file = LICENSE
project_urls =
    Documentation = https://github.com/jacobszpz/comptSort
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find:

[tox:tox]
envlist = py39, py38, py310

[testenv]
deps =
    pytest
    hypothesis

commands =
    pytest

[flake8]
max-line-length = 99

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

omit =
    */python?.?/*
    */lib-python/?.?/*.py
    */pypy/*
