[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sorting
license_file = LICENSE
project_urls =
    Source = https://github.com/jacobszpz/comptSort
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
python_requires = >=3.9
packages = find:

[options.entry_points]
console_scripts =
    comptSort = comptSort.cli:main

[options.packages.find]
exclude =
    tests*

[options.package_data]
comptSort = py.typed

[tox:tox]
envlist = py39, py310

[testenv]
deps =
    pytest
    hypothesis

commands =
    pytest

[flake8]
max-line-length = 99

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

omit =
    */python?.?/*
    */lib-python/?.?/*.py
    */pypy/*
